--- a/index.html
+++ b/index.html
@@ -43,8 +43,40 @@ Type '[[b;green;]help]' for a list of commands.
 [[b;green;]changelog]: show the latest updates
 [[b;green;]manual]: show the user manual
 [[b;green;]roadmap]: show the backlog and in-progress tasks
+[[b;green;]cheats]: show useful cheats for creating levels
 
 Other commands are interpreted by Lua.
+        </template>
+        <template id="manual">
+[[b;green;]Goal]
+• Get the robot to the end of the level ([[@;;;;Crystal.png]]).
+
+[[i;green;]Not so lost] [[b;green;]Controls]
+• [[b;orange;]Enter, Space]: Skip text
+• [[b;orange;]Arrow Keys, WASD]: Move around
+• [[b;orange;]1-3]: Drop module
+• [[b;orange;]4-6]: Take module
+• [[b;orange;]R]: Restart level
+• [[b;orange;]Backspace]: Undo last move
+        </template>
+        <template id="cheats">
+[[b;green;]Cheats]
+• [[b;orange;]giveInventory(item)]: Give an inventory item
+
+[[i;yellow;]Type 'cheats' followed by the cheat name for more info.]
+        </template>
+        <template id="cheats giveInventory">
+[[b;green;]giveInventory(item)]
+• item
+  • [[b;orange;]"N"]: North Module
+  • [[b;orange;]"S"]: South Module
+  • [[b;orange;]"E"]: East Module
+  • [[b;orange;]"W"]: West Module
+  • [[b;orange;]"H"]: Horizontal Module
+  • [[b;orange;]"V"]: Vertical Module
+  • [[b;orange;]"X"]: Explosion
+  • [[b;orange;]"I"]: Implosion
+  • [[b;orange;]"p"]: Portable Portal
         </template>
         <template id="changelog">
 [[b;green;]August 8th, 2022]
@@ -118,23 +150,26 @@ Other commands are interpreted by Lua.
 • Added a fullscreen mode for supported browsers.
 • Improved support for vertical aspect ratio.
 • Fixed some bugs.
-        </template>
-        <template id="latestChangelog">
+
 [[b;green;]September 3rd, 2022]
 • Fixed a bug with undo and portable portals.
-        </template>
-        <template id="manual">
-[[b;green;]Goal]
-• Get the robot to the end of the level ([[@;;;;Crystal.png]]).
+• Add a button to paste a level in the editor.
+• Added ability to share levels from iOS.
 
-[[i;green;]Not so lost] [[b;green;]Controls]
-• [[b;orange;]Enter, Space]: Skip text
-• [[b;orange;]Arrow Keys, WASD]: Move around
-• [[b;orange;]1-3]: Drop module
-• [[b;orange;]4-6]: Take module
-• [[b;orange;]R]: Restart level
-• [[b;orange;]Backspace]: Undo last move
+[[b;green;]September 4th, 2022]
+• Optimized and always enabled level preview.
+• Simplified the level mapping for walls.
+• Added some missing mappings for holes.
         </template>
+        <template id="latestChangelog">
+[[b;green;]September 5th, 2022]
+• Fully sprite based level editor.
+  • Goodbye ascii art!
+• Levels can now have an author.
+  • Added a level by Amélie P.
+• Added a new 'cheats' command.
+        </template>
+
         <link rel="stylesheet" href="https://unpkg.com/jquery.terminal@2.x.x/css/jquery.terminal.min.css"/>
         <style>
             @font-face {
@@ -316,11 +351,11 @@ Other commands are interpreted by Lua.
         <script type="application/lua" src="class.lua?version=1"></script>
         <script type="application/lua" src="color.lua?version=1"></script>
         <script type="application/lua" src="vec2.lua?version=1"></script>
-        <script type="application/lua" src="js_runtime.lua?version=10"></script>
+        <script type="application/lua" src="js_runtime.lua?version=14"></script>
 
         <script src="https://sfxr.me/riffwave.js"></script>
         <script src="https://sfxr.me/sfxr.js"></script>
         <script src="loader.js?version=1"></script>
-        <script src="runtime.js?version=18"></script>
+        <script src="runtime.js?version=22"></script>
     </body>
 </html>
