--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@ Other commands are interpreted by Lua.
         <template id="changelog">
 [[b;green;]August 8th, 2022]
 • Added WASD support
-• Fixed levels 48 (Grenadier) and 49 (Frogger)
+• Fixed levels Grenadier and Frogger
 • Added Previous and Next Level buttons in the editor
 • Added level name in the editor
 • Fixed issue with the boxes color
@@ -106,7 +106,7 @@ Other commands are interpreted by Lua.
 [[b;green;]August 20th, 2022]
 • New feature: portable portals
 • New feature: horizontal/vertical modules
-• [[!;;;;?levelToLoad=50]Two new levels] with the new features
+• [[!;;;;?levelToLoad=51]Two new levels] with the new features
 • Disabled warping through walls and closed doors
     • I feel like it is easier to see this as a "jump"
 
@@ -128,7 +128,7 @@ Other commands are interpreted by Lua.
 • Dynamically resize Discord to always fit beside the game.
 • Add a Terminal to view print messages and enter commands.
 • New tutorial for the first level with the jump.
-• New levels [[!;;;;?levelToLoad=52]Mine Field 2] and [[!;;;;?levelToLoad=53]Mine Field 3]
+• New levels [[!;;;;?levelToLoad=53]Mine Field 2] and [[!;;;;?levelToLoad=54]Mine Field 3]
 
 [[b;green;]September 1st, 2022]
 • Prevent warping inside a box.
@@ -166,7 +166,7 @@ Other commands are interpreted by Lua.
 • Fully sprite based level editor.
   • Goodbye ascii art!
 • Levels can now have an author.
-  • Added a level by Amélie P.
+  • Added a [[!;;;;?levelToLoad=11]level by Amélie P].
 • Added a new 'cheats' command.
         </template>
 
