--- a/public/index.html
+++ b/public/index.html
@@ -160,14 +160,21 @@ Other commands are interpreted by Lua.
 • Optimized and always enabled level preview.
 • Simplified the level mapping for walls.
 • Added some missing mappings for holes.
-        </template>
-        <template id="latestChangelog">
+
 [[b;green;]September 5th, 2022]
 • Fully sprite based level editor.
   • Goodbye ascii art!
 • Levels can now have an author.
   • Added a [[!;;;;?levelToLoad=11]level by Amélie P].
 • Added a new 'cheats' command.
+        </template>
+[[b;green;]September 7th, 2022]
+• Updated lasers to send blood as far as possible.
+• Increased maximum undo from 100 to 500.
+• Added a new "eraser" sprite for the level editor.
+• Added levels [[!;;;;?levelToLoad=57]Left Behind] and [[!;;;;?levelToLoad=57]Red Velvet].
+• Bug fixes.
+        <template id="latestChangelog">
         </template>
 
         <link rel="stylesheet" href="https://unpkg.com/jquery.terminal@2.x.x/css/jquery.terminal.min.css"/>
