Small modules and updated changelog

--- a/public/index.html
+++ b/public/index.html
@@ -173,6 +173,7 @@ Other commands are interpreted by Lua.
 • Updated lasers to send blood as far as possible.
 • Increased maximum undo from 100 to 500.
 • Added a new "eraser" sprite for the level editor.
+• Smaller modules so we can better see the blood.
 • Added levels [[!;;;;?levelToLoad=57]Left Behind] and [[!;;;;?levelToLoad=57]Red Velvet].
 • Bug fixes.
         </template>
