Change all links to _self.

--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@ Other commands are interpreted by Lua.
 [[b;green;]August 20th, 2022]
 • New feature: portable portals
 • New feature: horizontal/vertical modules
-• [[!;;;;?levelNameToLoad=Portable]Portable] and [[!;;;;?levelNameToLoad=The Wave]The Wave] with the new features
+• [[!;;;;?levelNameToLoad=Portable;{"target":"_self"}]Portable] and [[!;;;;?levelNameToLoad=The Wave;{"target":"_self"}]The Wave] with the new features
 • Disabled warping through walls and closed doors
     • I feel like it is easier to see this as a "jump"
 
@@ -129,16 +129,16 @@ Other commands are interpreted by Lua.
 • Dynamically resize Discord to always fit beside the game.
 • Add a Terminal to view print messages and enter commands.
 • New tutorial for the first level with the jump.
-• New levels [[!;;;;?levelNameToLoad=Mine Field 2]Mine Field 2] and [[!;;;;?levelNameToLoad=Mine Field 3]Mine Field 3]
+• New levels [[!;;;;?levelNameToLoad=Mine Field 2;{"target":"_self"}]Mine Field 2] and [[!;;;;?levelNameToLoad=Mine Field 3;{"target":"_self"}]Mine Field 3]
 
 [[b;green;]September 1st, 2022]
 • Prevent warping inside a box.
 • Fixed missing items when editing from the first levels.
-• Added fans (can jump over, blocks blood). See [[!;;;;?levelNameToLoad=Placement]Placement].
-• Brought back a [[!;;;;?levelNameToLoad=Cracks]level] that was using warp.
+• Added fans (can jump over, blocks blood). See [[!;;;;?levelNameToLoad=Placement;{"target":"_self"}]Placement].
+• Brought back a [[!;;;;?levelNameToLoad=Cracks;{"target":"_self"}]level] that was using warp.
 • Catch errors in setup() and draw() to display them here.
 • Added a checkbox to disable the survey.
-• Added a level variation [[!;;;;?levelNameToLoad=Portable 2]Portable 2].
+• Added a level variation [[!;;;;?levelNameToLoad=Portable 2;{"target":"_self"}]Portable 2].
 • Hide the diamond when the level is complete.
 • Don't allow testing invalid levels.
 
@@ -166,7 +166,7 @@ Other commands are interpreted by Lua.
 • Fully sprite based level editor.
   • Goodbye ascii art!
 • Levels can now have an author.
-  • Added a [[!;;;;?levelNameToLoad=Ruby]level by Amélie P].
+  • Added a [[!;;;;?levelNameToLoad=Ruby;{"target":"_self"}]level by Amélie P].
 • Added a new 'cheats' command.
         </template>
         <template id="latestChangelog">
@@ -175,7 +175,7 @@ Other commands are interpreted by Lua.
 • Increased maximum undo from 100 to 500.
 • Added a new "eraser" sprite for the level editor.
 • Smaller modules so we can better see the blood.
-• Added levels [[!;;;;?levelNameToLoad=Left Behind]Left Behind] and [[!;;;;?levellevelNameToLoadToLoad=Red Velvet]Red Velvet].
+• Added levels [[!;;;;?levelNameToLoad=Left Behind;{"target":"_self"}]Left Behind] and [[!;;;;?levellevelNameToLoadToLoad=Red Velvet;{"target":"_self"}]Red Velvet].
 • Bug fixes.
         </template>
 
