Fixed a typo in a link.

--- a/public/index.html
+++ b/public/index.html
@@ -175,7 +175,7 @@ Other commands are interpreted by Lua.
 • Increased maximum undo from 100 to 500.
 • Added a new "eraser" sprite for the level editor.
 • Smaller modules so we can better see the blood.
-• Added levels [[!;;;;?levelNameToLoad=Left Behind;{"target":"_self"}]Left Behind] and [[!;;;;?levellevelNameToLoadToLoad=Red Velvet;{"target":"_self"}]Red Velvet].
+• Added levels [[!;;;;?levelNameToLoad=Left Behind;{"target":"_self"}]Left Behind] and [[!;;;;?levelNameToLoad=Red Velvet;{"target":"_self"}]Red Velvet].
 • Bug fixes.
         </template>
 
