--- a/public/index.html
+++ b/public/index.html
@@ -168,8 +168,7 @@ Other commands are interpreted by Lua.
 • Levels can now have an author.
   • Added a [[!;;;;?levelNameToLoad=Ruby;{"target":"_self"}]level by Amélie P].
 • Added a new 'cheats' command.
-        </template>
-        <template id="latestChangelog">
+
 [[b;green;]September 7th, 2022]
 • Updated lasers to send blood as far as possible.
 • Increased maximum undo from 100 to 500.
@@ -178,7 +177,11 @@ Other commands are interpreted by Lua.
 • Added levels [[!;;;;?levelNameToLoad=Left Behind;{"target":"_self"}]Left Behind] and [[!;;;;?levelNameToLoad=Red Velvet;{"target":"_self"}]Red Velvet].
 • Bug fixes.
         </template>
-
+        <template id="latestChangelog">
+[[b;green;]September 10th, 2022]
+• One level a day keeps the doctor away.
+  • New level [[!;;;;?levelNameToLoad=Yoga;{"target":"_self"}]Yoga].
+        </template>
         <link rel="stylesheet" href="https://unpkg.com/jquery.terminal@2.x.x/css/jquery.terminal.min.css"/>
         <style>
             @font-face {
