--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,7 @@ Other commands are interpreted by Lua.
         <template id="latestChangelog">
 [[b;green;]September 10th, 2022]
 • One level a day keeps the doctor away.
-  • New level [[!;;;;?levelNameToLoad=Yoga;{"target":"_self"}]Yoga].
+  • New levels [[!;;;;?levelNameToLoad=Yoga;{"target":"_self"}]Yoga] and [[!;;;;?levelNameToLoad=Springboard;{"target":"_self"}]Springboard].
         </template>
         <link rel="stylesheet" href="https://unpkg.com/jquery.terminal@2.x.x/css/jquery.terminal.min.css"/>
         <style>
