New electric floor feature and level

--- a/public/index.html
+++ b/public/index.html
@@ -176,11 +176,15 @@ Other commands are interpreted by Lua.
 • Smaller modules so we can better see the blood.
 • Added levels [[!;;;;?levelNameToLoad=Left Behind;{"target":"_self"}]Left Behind] and [[!;;;;?levelNameToLoad=Red Velvet;{"target":"_self"}]Red Velvet].
 • Bug fixes.
-        </template>
-        <template id="latestChangelog">
+
 [[b;green;]September 10th, 2022]
 • One level a day keeps the doctor away.
   • New levels [[!;;;;?levelNameToLoad=Yoga;{"target":"_self"}]Yoga] and [[!;;;;?levelNameToLoad=Springboard;{"target":"_self"}]Springboard].
+        </template>
+        <template id="latestChangelog">
+[[b;green;]September 11th, 2022]
+• One feature a day keeps the doctor away.
+  • New electric floor feature with level [[!;;;;?levelNameToLoad=Plugged In;{"target":"_self"}]Plugged In].
         </template>
         <link rel="stylesheet" href="https://unpkg.com/jquery.terminal@2.x.x/css/jquery.terminal.min.css"/>
         <style>
