--- a/public/index.html
+++ b/public/index.html
@@ -188,6 +188,7 @@ Other commands are interpreted by Lua.
 
 [[b;green;]September 12th, 2022]
 • Robot and items can be placed on electric floors in the editor.
+• Levels [[!;;;;?levelNameToLoad=Hip Hop;{"target":"_self"}]Hip Hop] and [[!;;;;?levelNameToLoad=Demining;{"target":"_self"}]Demining].
         </template>
         <link rel="stylesheet" href="https://unpkg.com/jquery.terminal@2.x.x/css/jquery.terminal.min.css"/>
         <style>
