Simplified first level blood module area

--- a/public/index.html
+++ b/public/index.html
@@ -176,12 +176,11 @@ Other commands are interpreted by Lua.
 • Smaller modules so we can better see the blood.
 • Added levels [[!;;;;?levelNameToLoad=Left Behind;{"target":"_self"}]Left Behind] and [[!;;;;?levelNameToLoad=Red Velvet;{"target":"_self"}]Red Velvet].
 • Bug fixes.
-        </template>
-        <template id="latestChangelog">
+
 [[b;green;]September 10th, 2022]
 • One level a day keeps the doctor away.
   • New levels [[!;;;;?levelNameToLoad=Yoga;{"target":"_self"}]Yoga] and [[!;;;;?levelNameToLoad=Springboard;{"target":"_self"}]Springboard].
-
+        </template>
 [[b;green;]September 11th, 2022]
 • One feature a day keeps the doctor away.
   • New electric floor feature with level [[!;;;;?levelNameToLoad=Plugged In;{"target":"_self"}]Plugged In].
@@ -189,6 +188,9 @@ Other commands are interpreted by Lua.
 [[b;green;]September 12th, 2022]
 • Robot and items can be placed on electric floors in the editor.
 • Levels [[!;;;;?levelNameToLoad=Hip Hop;{"target":"_self"}]Hip Hop] and [[!;;;;?levelNameToLoad=Demining;{"target":"_self"}]Demining].
+
+[[b;green;]September 21st, 2022]
+• Simplified the first level blood module area.
         </template>
         <link rel="stylesheet" href="https://unpkg.com/jquery.terminal@2.x.x/css/jquery.terminal.min.css"/>
         <style>
