Fixed changelog issue

--- a/public/index.html
+++ b/public/index.html
@@ -181,6 +181,7 @@ Other commands are interpreted by Lua.
 • One level a day keeps the doctor away.
   • New levels [[!;;;;?levelNameToLoad=Yoga;{"target":"_self"}]Yoga] and [[!;;;;?levelNameToLoad=Springboard;{"target":"_self"}]Springboard].
         </template>
+        <template id="latestChangelog">
 [[b;green;]September 11th, 2022]
 • One feature a day keeps the doctor away.
   • New electric floor feature with level [[!;;;;?levelNameToLoad=Plugged In;{"target":"_self"}]Plugged In].
