--- a/public/index.html
+++ b/public/index.html
@@ -180,18 +180,22 @@ Other commands are interpreted by Lua.
 [[b;green;]September 10th, 2022]
 • One level a day keeps the doctor away.
   • New levels [[!;;;;?levelNameToLoad=Yoga;{"target":"_self"}]Yoga] and [[!;;;;?levelNameToLoad=Springboard;{"target":"_self"}]Springboard].
-        </template>
-        <template id="latestChangelog">
+
 [[b;green;]September 11th, 2022]
 • One feature a day keeps the doctor away.
   • New electric floor feature with level [[!;;;;?levelNameToLoad=Plugged In;{"target":"_self"}]Plugged In].
-
+        </template>
+        <template id="latestChangelog">
 [[b;green;]September 12th, 2022]
 • Robot and items can be placed on electric floors in the editor.
 • Levels [[!;;;;?levelNameToLoad=Hip Hop;{"target":"_self"}]Hip Hop] and [[!;;;;?levelNameToLoad=Demining;{"target":"_self"}]Demining].
 
 [[b;green;]September 21st, 2022]
 • Simplified the first level blood module area.
+
+[[b;green;]October 4th, 2022]
+• Fixed an error when swiping towards exterior walls.
+  • This was introduced by the new electric floors feature.
         </template>
         <link rel="stylesheet" href="https://unpkg.com/jquery.terminal@2.x.x/css/jquery.terminal.min.css"/>
         <style>
